# embedded-kickstarter

./: NEED_TO_FIX.md  README.md
app-template/: CMakeLists.txt
app-template/src/: CMakeLists.txt
app-template/toolchains/: aarch64-toolchain.cmake
c-app-template/: CMakeLists.txt  build.sh
c-app-template/include/: main-utils.h
c-app-template/src/: CMakeLists.txt  main.c
c-app-template/test/: CMakeLists.txt
c-app-template/test/unit/: CMakeLists.txt  test-bin.c
c-app-template/toolchains/: aarch64-toolchain.cmake
cpp-app-template/: CMakeLists.txt
cpp-app-template/include/: main-utils.h
cpp-app-template/src/: CMakeLists.txt  main.cpp
cpp-app-template/test/: CMakeLists.txt
cpp-app-template/test/unit/: CMakeLists.txt
cpp-app-template/toolchains/: aarch64-toolchain.cmake
executableTemplate/: build.sh
executableTemplate/src/: CMakeLists.txt
